errors/error_4.txt
build/base/include/drivers/audio/waverecorder.h:68:13: error: 'WaveRecorder_GPIO_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_GPIO_Init(void);
             ^
build/base/include/drivers/audio/waverecorder.h:69:13: error: 'WaveRecorder_SPI_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_SPI_Init(uint32_t Freq);
             ^
build/base/include/drivers/audio/waverecorder.h:70:13: error: 'WaveRecorder_DMA_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_DMA_Init(void);
             ^
cc1: error: unrecognized command line option '-Wno-nonnull-compare' [-Werror]
cc1: error: unrecognized command line option '-Wno-misleading-indentation' [-Werror]
cc1: all warnings being treated as errors
mk/image_lib.mk:33: recipe for target 'build/base/obj/src/drivers/audio/portaudio/stm32f4_pa.o' failed
make[4]: *** [build/base/obj/src/drivers/audio/portaudio/stm32f4_pa.o] Error 1
mk/build.mk:19: recipe for target 'build' failed
make[3]: *** [build] Error 2
mk/load.mk:41: recipe for target 'build' failed

